# Research_Agent

./: .gitignore  pyproject.toml  requirements.txt
working_space/: agent.py  models.py  project_structure.md  schema.md  tool.py
