[project]
name = "research-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=4.0.0",
    "dotenv>=0.9.9",
    "google-genai>=2.10.0",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "pydantic>=2.13.4",
]
